--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,2 @@
-VITE_API_URL=https://quickbill-manager.onrender.com
+VITE_API_URL=http://localhost:3000
+# VITE_API_URL=https://quickbill-manager.onrender.com
